@startuml lab10
class Point {
    #coordX: float
    #coordY: float
+Point()
+Point(float,float)
+void setX(float)
+void setY(float)
+float getX()
+float getY()
}

abstract class Shape {
   #name: char*
    #pointA: Point
#side: float
+virtual void print()
}

abstract class TwoDShape extends Shape {
#static int count
+virtual float getPerimeter()
+virtual float getArea()
+TwoDShape()
+TwoDShape(float,float,float,const char*)
+~TwoDShape()
+static int getCount()
+static  void incCount()
}

class Square extends TwoDShape {
    #pointB: Point
#pointC: Point
#pointD: Point
+void print()
+float getPerimeter()
+float getArea()
+Square()
+Square(float,float,float,const char*)
+~Square()
}

class Circle extends TwoDShape {
+void print()
+float getPerimeter()
+float getArea()
+Circle()
+Circle(float,float,float,const char*)
+~Circle()
}

class Triangle extends TwoDShape {
#pointB: Point
#pointC: Point
+void print()
+float getPerimeter()
+float getArea()
+Triangle()
+Triangle(float,float,float,const char*)
+~Triangle()
}

class TwoDBusiness {
static void areaSort(linkedList<TwoDShape*>&)
static void perimeterSort(linkedList<TwoDShape*>&)
}

class Node {
-T data
-Node *next
-Node *pre
+Node(const T&)
}

class linkedList<T> {
-Node *head
-Node *tail
-int len
+linkedList()
+~linkedList()
+void add(const T&)
+void insert(const T&, int)
+T get(int)
+void deleteL(int)
int length()
}

Shape "1" *-- "1...*" Point: is made of
TwoDBusiness ..> TwoDShape: sorts
TwoDBusiness ..> linkedList: uses
linkedList "1" *-- "*" Node: contains
Node "1" o-- "0..2" Node: points to

@enduml
